apps/vesta/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vesta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vesta
  template:
    metadata:
      labels:
        app: vesta
    spec:
      containers:
        - name: vesta
          image: ghcr.io/veirt/vesta:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 16Mi
            limits:
              memory: 64Mi
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              subPath: vesta
            - name: timezone
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: data-pvc
        - name: timezone
          hostPath:
            path: /etc/localtime
            type: File
