apps/vesta/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vesta-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: vesta.veirt.web.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vesta-service
                port:
                  number: 8450
  tls:
    - hosts:
        - vesta.veirt.web.id
      secretName: vesta-tls
